k8s/infrastructure/controllers/victoria-metrics/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: reverse-proxy
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - grafana.proxy.home.arpa
  rules:
    - backendRefs:
        - name: victoria-metrics-k8s-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm
  namespace: observability
spec:
  parentRefs:
    - name: reverse-proxy
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - vm.proxy.home.arpa
  rules:
    - backendRefs:
        - name: vmsingle-victoria-metrics-k8s-stack
          port: 8428
